Add 02_chunking_experiments notebook with experiments, plots, and observations

--- a/notebooks/01_pdf_extraction.ipynb
+++ b/notebooks/01_pdf_extraction.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c3f635cc",
    "metadata": {},
    "outputs": [
@@ -69,12 +69,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Loading PDFs from Varsity and SEBI sources...\n",
-      "Total pages loaded: 2929\n",
-      "\n",
-      "Pages loaded per source:\n",
-      "- varsity: 2186 pages\n",
-      "- sebi_education: 743 pages\n"
+      "Loading PDFs from Varsity and SEBI sources...\n"
      ]
     }
    ],
@@ -95,25 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "de26a838",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Example page metadata:\n",
-      "{'source': 'varsity_module01_introduction_to_stock_markets.pdf', 'source_path': '..\\\\data\\\\raw\\\\varsity\\\\varsity_module01_introduction_to_stock_markets.pdf', 'category': 'varsity', 'page_number': 1, 'page_label': '1', 'total_pages': 111, 'text_length': 58, 'load_date': '2025-08-14T16:32:15.043596'}\n",
-      "\n",
-      "Example page content (first 500 chars):\n",
-      "Introduction to \n",
-      "Stock Markets\n",
-      "ZERODHA.COM/VARSITY\n",
-      "ZERODHA\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Inspect a sample page\n",
     "print(\"Example page metadata:\")\n",
@@ -136,22 +116,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7ddd7790",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Saving raw PDF pages to JSON files (one per source)...\n",
-      "Saved 2186 pages to ..\\data\\interim\\raw\\all_pdfs_varsity.json\n",
-      "Saved 743 pages to ..\\data\\interim\\raw\\all_pdfs_sebi_education.json\n",
-      "Raw PDF pages saved to data/interim/raw/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\nSaving raw PDF pages to JSON files (one per source)...\")\n",
     "save_docs_to_json(docs, output_folder=\"../data/interim/raw/\")\n",
@@ -175,29 +143,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0d21c195",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Cleaning all PDF JSON files in data/interim/...\n",
-      "Saved 743 cleaned pages to ..\\data\\interim\\cleaned\\all_pdfs_sebi_education_cleaned.json\n",
-      "Saved 2186 cleaned pages to ..\\data\\interim\\cleaned\\all_pdfs_varsity_cleaned.json\n",
-      "Cleaning complete. Each input JSON now has a *_cleaned.json counterpart.\n",
-      "Total cleaned pages in sample file: 743\n",
-      "\n",
-      "Example cleaned page metadata:\n",
-      "{'source': 'sebi_buyback_open_offer.pdf', 'source_path': '..\\\\data\\\\raw\\\\sebi_education\\\\sebi_buyback_open_offer.pdf', 'category': 'sebi_education', 'page_number': 1, 'page_label': '1', 'total_pages': 32, 'text_length': 35, 'load_date': '2025-08-14T16:34:03.027404'}\n",
-      "\n",
-      "Example cleaned page content (first 500 chars):\n",
-      "Buyback of and Open Offer of Shares\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\nCleaning all PDF JSON files in data/interim/...\")\n",
     "clean_docs(input_folder=\"../data/interim/raw\", output_folder=\"../data/interim/cleaned\")\n",
@@ -233,37 +182,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6284e2f7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Splitting all cleaned JSON files in data/interim/cleaned/..\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_sebi_education_cleaned_part1.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_sebi_education_cleaned_part2.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_sebi_education_cleaned_part3.json\n",
-      "Saved 143 pages to ..\\data\\interim\\split\\all_pdfs_sebi_education_cleaned_part4.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_varsity_cleaned_part1.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_varsity_cleaned_part2.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_varsity_cleaned_part3.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_varsity_cleaned_part4.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_varsity_cleaned_part5.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_varsity_cleaned_part6.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_varsity_cleaned_part7.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_varsity_cleaned_part8.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_varsity_cleaned_part9.json\n",
-      "Saved 200 pages to ..\\data\\interim\\split\\all_pdfs_varsity_cleaned_part10.json\n",
-      "Saved 186 pages to ..\\data\\interim\\split\\all_pdfs_varsity_cleaned_part11.json\n",
-      "\n",
-      "✅ All *_cleaned.json files have been split.\n",
-      "Splitting complete.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\nSplitting all cleaned JSON files in data/interim/cleaned/..\")\n",
     "split_all_cleaned_jsons(\n",
@@ -291,270 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "52633bfe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Chunking all cleaned JSON files in data/interim/...\n",
-      "\n",
-      "Processing all_pdfs_sebi_education_cleaned_part1.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_sebi_education_cleaned_part1.json: 100%|██████████| 200/200 [00:00<00:00, 86037.01page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_sebi_education_cleaned_part1_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_sebi_education_cleaned_part2.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_sebi_education_cleaned_part2.json: 100%|██████████| 200/200 [00:00<00:00, 73103.34page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_sebi_education_cleaned_part2_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_sebi_education_cleaned_part3.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_sebi_education_cleaned_part3.json: 100%|██████████| 200/200 [00:00<00:00, 53305.00page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_sebi_education_cleaned_part3_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_sebi_education_cleaned_part4.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_sebi_education_cleaned_part4.json: 100%|██████████| 143/143 [00:00<00:00, 28291.77page/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_sebi_education_cleaned_part4_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_varsity_cleaned_part1.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Chunking all_pdfs_varsity_cleaned_part1.json: 100%|██████████| 200/200 [00:00<00:00, 16142.49page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_varsity_cleaned_part1_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_varsity_cleaned_part10.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_varsity_cleaned_part10.json: 100%|██████████| 200/200 [00:00<00:00, 16257.31page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_varsity_cleaned_part10_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_varsity_cleaned_part11.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_varsity_cleaned_part11.json: 100%|██████████| 186/186 [00:00<00:00, 16584.62page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_varsity_cleaned_part11_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_varsity_cleaned_part2.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_varsity_cleaned_part2.json: 100%|██████████| 200/200 [00:00<00:00, 19397.87page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_varsity_cleaned_part2_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_varsity_cleaned_part3.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_varsity_cleaned_part3.json: 100%|██████████| 200/200 [00:00<00:00, 15938.53page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_varsity_cleaned_part3_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_varsity_cleaned_part4.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_varsity_cleaned_part4.json: 100%|██████████| 200/200 [00:00<00:00, 43484.57page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_varsity_cleaned_part4_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_varsity_cleaned_part5.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_varsity_cleaned_part5.json: 100%|██████████| 200/200 [00:00<00:00, 25341.70page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_varsity_cleaned_part5_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_varsity_cleaned_part6.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_varsity_cleaned_part6.json: 100%|██████████| 200/200 [00:00<00:00, 19374.12page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_varsity_cleaned_part6_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_varsity_cleaned_part7.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_varsity_cleaned_part7.json: 100%|██████████| 200/200 [00:00<00:00, 16686.11page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_varsity_cleaned_part7_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_varsity_cleaned_part8.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_varsity_cleaned_part8.json: 100%|██████████| 200/200 [00:00<00:00, 43986.20page/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_varsity_cleaned_part8_chunks.jsonl\n",
-      "\n",
-      "Processing all_pdfs_varsity_cleaned_part9.json ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Chunking all_pdfs_varsity_cleaned_part9.json: 100%|██████████| 200/200 [00:00<00:00, 23607.94page/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved chunks to ..\\data\\processed\\all_pdfs_varsity_cleaned_part9_chunks.jsonl\n",
-      "Chunking complete. Each cleaned JSON now has a corresponding *_chunks.json file in data/processed/\n",
-      "\n",
-      "Chunks per source:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\nChunking all cleaned JSON files in data/interim/...\")\n",
     "\n",
@@ -562,7 +224,7 @@
     "chunk_docs_streaming(\n",
     "    input_folder=\"../data/interim/split/\",\n",
     "    output_folder=\"../data/processed/\",\n",
-    "    chunk_size=800,\n",
+    "    chunk_size=500,\n",
     "    overlap=100,\n",
     "    jsonl_output=True,\n",
     ")\n",
@@ -604,28 +266,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "9b10faad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "✅ PDF extraction, cleaning, and chunking complete!\n",
-      "\n",
-      "📂 Raw JSON files (..\\data\\interim\\raw): 2\n",
-      "    Total raw pages: 2929\n",
-      "📂 Cleaned JSON files (..\\data\\interim\\cleaned): 2\n",
-      "    Total cleaned pages: 2929\n",
-      "📂 Split JSON files (..\\data\\interim\\split): 15\n",
-      "    Total split pages: 2929\n",
-      "📂 Chunked JSONL files (..\\data\\processed): 15\n",
-      "    Total chunks: 5846\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Paths\n",
     "raw_folder = Path(\"../data/interim/raw/\")\n",
